--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+php-java-bridge (4.0.8-2) unstable; urgency=low
+
+  * Improvements on packaging. The php-java-bridge-j2ee now stop and 
+    restart tomcat5.
+
+ -- Andre Felipe Machado <af-machado@uol.com.br>  Tue, 10 Apr 2007 14:34:33 -0300
+
 php-java-bridge (4.0.8-1) unstable; urgency=low
 
   * New upstream version.
