--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+php-java-bridge (4.0.8a-1) unstable; urgency=low
+
+  * new upstream version
+  * installini target substituted by install file
+  * no more mono.ini installation
+  * postrm and postinst scripts corrected.
+  * some rules formatting cleanup
+
+ -- Andre Felipe Machado <af-machado@uol.com.br>  Fri, 20 Apr 2007 14:38:06 -0300
+
 php-java-bridge (4.0.8-2) unstable; urgency=low
 
   * Improvements on packaging. The php-java-bridge-j2ee now stop and 
