--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,25 @@ php-java-bridge NEWS -- history of user-visible changes.
 Please send bug reports, questions and suggestions to
 <php-java-bridge-users@lists.sourceforge.net>.
 
+Version 4.1.5
+
+* The simple web server built into the JavaBridge.jar can now handle
+JSR223 scripts, directories and plain (html- and text-) files. This is
+convenient for testing server-side script implementations such as PHP,
+bean shell, ecma script, etc.
+
+* The JavaBridge.war file is now marked as "distributable" and can be
+used in a cluster environment. We have tested a Tomcat 6 cluster with
+3 nodes running on different servers.
+
+
+Version 4.1.3
+
+* The bridge doesn't reset the log4j configuration if chainsaw is
+listening on port 445.  To override the log4j configuration, set
+java.log_file=@127.0.0.1:445 in the php.ini (C implementation). Or set
+servlet_log_file to @127.0.0.1:447 in the WEB-INF/web.xml.
+
 Version 4.1.1
 
 * For compatibility with the pure PHP implementation the C
